Tue Mar 23 12:11:04 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htmerge/words.cc(mergeWords): Fix to prevent description text
	words from clobbering anchor number of merged anchor text words.

Tue Mar 23 12:02:00 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(generateStars): Add in support for use_star_image
	which was lost when template support was put in way back when.

Tue Mar 23 11:47:52 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* Makefile.in: add missing ';' in for loops, between fi & done

Mon Mar 22 16:06:15 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc: Check for presence of more than one <title> tag.

Mon Mar 22 15:32:15 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/parse_doc.pl: Fix handling of minimum word length.

Sun Mar 21 15:19:00 1999  Hans-Peter Nilsson  <hp@bitrange.com>

	* htlib/HtPack.cc (htPack): New.
	* htlib/HtPack.h: New.
	* htsearch/parser.cc (perform_push): Unpack WordRecords using
	htUnpack.
	* htsearch/htsearch.h: Add "debug" declaration.
	* htmerge/words.cc (mergeWords): Pack WordRecords using htPack.
	* htlib/Makefile.in (OBJS): Add HtPack.o
	* htcommon/WordRecord.h: Add WORD_RECORD_COMPRESSED_FORMAT

	* htdig/HTML.cc (parse): Keep contents in String variable
	textified_contents while using its "char *".

	* htsearch/Display.cc (excerpt): Similar for head_string.

Thu Mar 18 20:01:24 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* installdir/long.html, installdir/short.html: Write out HTML
	versions of the builtin templates.

	* installdir/htdig.conf: Add commented-out template_map and
	template_name attributes to use the on-disk versions.

Tue Mar 16 03:06:06 1999  Hans-Peter Nilsson  <hp@bitrange.com>

	* htcommon/DocumentDB.cc (Delete): Fix bad parameter to Get: use
	key, not DocID.

Tue Mar 16 01:50:16 1999  Hans-Peter Nilsson  <hp@bitrange.com>

	* htlib/HtWordType.h (class HtWordType): New.
	* htlib/HtWordType.cc: New.